--- a/index.html
+++ b/index.html
@@ -6,74 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./Styles/estilos.css">
-    <title>Document</title>
+    <title>Blizzard</title>
 </head>
-<body>
-    <section class="container">
-        <div class="card-group">
-            <div style="text-align: center;" class="card">
-                <div>
-                    <img src="./img/diablo4.webp" class="card-img-top imagenSup" alt="...">
-                </div>
-            <div class="card-body">
-                <h5 class="card-title">DIABLO IV ID:1</h5>
-                <p class="card-text">ROL Y ACCION</p>
-                <p class="card-text">$12000</p>
-                <button class="btn btn-primary">COMPRAR</button>
-            </div>
-            </div>
-            <div style="text-align: center;" class="card">
-                <img src="./img/wow-dragonflight-rectangle-GC.webp" class="card-img-top imagenSup" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">WORLD OF WARCRAFT ID:2</h5>
-                <p class="card-text">MMORPG</p>
-                <p class="card-text">$8500</p>
-                <button class="btn btn-primary">COMPRAR</button>
-            </div>
-            </div>
-            <div style="text-align: center;" class="card">
-                <img src="./img/overwatch2.webp" class="card-img-top imagenSup" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">OVERWATCH 2 ID:3</h5>
-                <p class="card-text">ACCION POR EQUIPOS</p>
-                <p class="card-text">$3000</p>
-                <button class="btn btn-primary">COMPRAR</button>
-            </div>
+<body>   
+    <div class="container my-5">
+        <div class="row">
+            <div class="col text-center">
+                <a href="index.html"><img src="./img/pngwing.com.png" alt="Blizzard" width="180"></a>
             </div>
         </div>
-    </section>
-    <section class="container">
-        <div style="text-align: center;" class="card-group">
-            <div class="card">
-                <img src="./img/diablo-immortal.webp" class="card-img-top imagenSup" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">DIABLO INMORTAL ID:4</h5>
-                <p class="card-text">ROL Y ACCION</p>
-                <p class="card-text">$5000</p>
-                <button class="btn btn-primary">COMPRAR</button>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-md-3 text-center">
+                &nbsp;
             </div>
+            <div class="col-md-6 text-center">
+                <div class="input-group mb-3">
+                    <input type="text" id="textoBusqueda" class="form-control" placeholder="Busca por tipo de juego">
+                    <span class="input-group-text" id="btnBusqueda">Buscar</span>
+                </div>          
             </div>
-            <div style="text-align: center;" class="card">
-                <img src="./img/starcraft2.webp" class="card-img-top imagenSup" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">STARCRAFT 2 ID:5</h5>
-                <p class="card-text">ESTRATEGIA EN TIEMPO REAL</p>
-                <p class="card-text">$2000</p>
-                <button class="btn btn-primary">COMPRAR</button>
-            </div>
-            </div>
-            <div style="text-align: center;" class="card">
-                <img src="./img/hearthstone-with-cards.webp" class="card-img-top imagenSup" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">HEARTHSTONE ID:6</h5>
-                <p class="card-text">JUEGO DE ACARTAS DE ESTRATEGIA</p>
-                <p class="card-text">$1500</p>
-                <button class="btn btn-primary">COMPRAR</button>
-            </div>
+            <div class="col-md-3 text-end">
+                <a href="carrito.html" id="botonCarrito"></a>
             </div>
         </div>
-    </section>
+    </div>
+    <main>
+        <div class="col-md-1">
+            &nbsp;
+        </div>
+        <div class="container">
+            <div id="contenido" class="row"></div>
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./Js/main.js"></script>
+    <script src="./Js/funciones.js"></script>
+    <script src="./Js/render.js"></script>
+    <script src="./Js/productos.js"></script>
 </body>
 </html>
