--- a/carrito.html
+++ b/carrito.html
@@ -21,7 +21,9 @@
             &nbsp;
         </div>
         <div class="col-md-10 text-end">
-            <a href="carrito.html" id="botonCarrito"></a>
+            <a href="carrito.html" id="botonCarrito">
+                <span id="cantidad-carrito"></span>
+            </a>
         </div>
         <div class="col-md-1">
             &nbsp;
@@ -52,5 +54,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./Js/funciones.js"></script>
-    <script src="./Js/carrito.js"></script>
+    <script src="./Js/carrito.js"></script>   
+    <script src="./Js/productos.js"></script>
+
 </html>
