--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
             <div class="col-md-3 text-center">
                 &nbsp;
             </div>
-            <div class="col-md-6 text-center">
-                <div class="input-group mb-3">
-                    <input type="text" id="textoBusqueda" class="form-control" placeholder="Busca por tipo de juego">
-                    <span class="input-group-text" id="btnBusqueda">Buscar</span>
-                </div>          
+            <div class="col-md-6 text-center">       
             </div>
             <div class="col-md-3 text-end">
-                <a href="carrito.html" id="botonCarrito"></a>
+                <a href="carrito.html" id="botonCarrito">
+                    <span id="cantidad-carrito"></span>
+                </a>
             </div>
         </div>
     </div>
@@ -42,7 +40,8 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./Js/funciones.js"></script>
-    <script src="./Js/render.js"></script>
     <script src="./Js/productos.js"></script>
+    <script src="./Js/render.js"></script>
+
 </body>
 </html>
